routetable.tf
resource "aws_route_table" "myroute" {
    vpc_id = aws_vpc.myvpc1.id
    route  {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.gw.id
    }
    tags = {
        Name = "myroute"
    }
  
}
